--- a/App_GlobalResources/Resource.resx
+++ b/App_GlobalResources/Resource.resx
@@ -126,6 +126,9 @@
   <data name="Female" xml:space="preserve">
     <value>Female</value>
   </data>
+  <data name="flag" xml:space="preserve">
+    <value>~/pics/us.png</value>
+  </data>
   <data name="grad" xml:space="preserve">
     <value>I plan to Graduate on:</value>
   </data>
